2011-12-10 Roman
- FIX:DAQ: Wait to redundancy task start for archives' blocks of atributes DAQ parameters restore on start.


2011-12-09 Roman
- FIX:RPM- and Deb-packages build resources is updated for information about package Model.Boiler fix.


2011-12-08 Roman
- !!:FIX:UI.Vision, UI.WebVision: Primitive "Protocol" update on time and size is fixed.
- !!:FIX:UI.WebVision: Primitive "Protocol" tail clear is fixed.
- UI.Vision, UI.WebVision: Trend cut to percent limit (0...100) of primitive "Diagram" is removed for allow see values
    out of board by view offset change.
- SYS: Force files *.la remove is added to RPM-build *.spec files.
- FIX:DAQ.OPC_UA: Build for old version of OpenSSL is fixed, newer to 0.9.8.
- UI.Vision: Build with QT version 4.4 is adapted.


2011-12-07 Maxim
- FIX:DB: Model "Boiler" is fixed for the correct representation on the small resolution (Nokia N900, N9) screens.


2011-12-05 Roman 0.7.2
- RPM- and Deb-packages build resources is updated for version 0.7.2.
- DOC: README and TODO is updated.
- UI.QTStarter: Splash is updated for 0.7.2 release.
- DOC: Release notes for version 0.7.2 is added. Index files is updated.
- DOC: Generic document "openscada.pdf" and library "WLib Main" is updated.
- !!!!:DB: Model "AGLKS", "Boiler" and main libraries DB files is updated. Electro elements library is added.
- !!:Protocol.HTTP: Documents and full translations is updated and released version 1.6.0.
- FIX:DAQ.OPC_UA: Build for old version of OpenSSL is fixed.


2011-12-01 Roman
- FIX:UI.Vision: Possible crash on screens count request from other thread (not QT main) is fixed.
    The problem possible depends from real allow multiply screens and Xinerma active.


2011-11-30 Roman
- FIX:UI.Vision: Copy widgets into page is fixed.


2011-11-30 Maxim
- FIX:UI.Vision: Link inspector update is made adaptive to its visibility.
- FIX:UI.Vision: Record of the context for the Undo/ReDo on exit the editing mode is fixed for the primitive ElFigure.

