@@ -1,3 +1,7 @@
+2011-12-12 Roman
+- FIX:DAQ.SNMP: Early attributes init on parameter enable is added, by send typical request.
+
+
 2011-12-10 Roman
 - FIX:DAQ: Wait to redundancy task start for archives' blocks of atributes DAQ parameters restore on start.
 
